--- a/demo.html
+++ b/demo.html
@@ -30,9 +30,9 @@ $('document').ready(function() {
 	$('.mese').tabExpand({colorSelect:'rgb(197, 155, 78)',colorDeselect:'rgb(244, 227, 160)',setVisible:"mese"});
 	$('.regione').tabExpand({colorSelect:'#9E9D3F',colorDeselect:'#FFF'});
 	$('.provincia').tabExpand({colorSelect:'rgb(148, 145, 145)',colorDeselect:'#FFF'});
-	$('#closed').removeColumn({th:1,td:[1,2]});
-
-	$('#lineRow').addRow({td:4});
+	
+	//$('#closed').removeColumn({th:1,td:[1,2]});
+	//$('#lineRow').addRow({td:4});
 
 });
 </script>
